Rutas de productos terminadas

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST=10.50.32.44
-DB_PORT=3306
-DB_USER=fernando
-DB_PASSWORD=utngt2025
+DB_HOST=gondola.proxy.rlwy.net
+DB_PORT=22646
+DB_USER=root
+DB_PASSWORD=DGaFhPDypnTxbZGKctXFuElCXFHusKCi
 DB_NAME=railway
 
 PORT=8080
