--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DB_HOST=gondola.proxy.rlwy.net
-DB_PORT=22646
-DB_USER=root
-DB_PASSWORD=DGaFhPDypnTxbZGKctXFuElCXFHusKCi
-DB_NAME=railway
+DB_HOST=172.19.4.4
+DB_PORT=3306
+DB_USER=UTNadmin
+DB_PASSWORD=utngt2025
+DB_NAME=UtnTechbd
 
 PORT=8080
 NODE_ENV=development
