--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DB_HOST=172.19.4.4
 DB_PORT=3306
 DB_USER=UTNadmin
 DB_PASSWORD=utngt2025
-DB_NAME=UtnTechbd
+DB_NAME=utntechbd
 
 PORT=8080
 NODE_ENV=development
